fix: scrollbar behaviour jumps/shifts

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -13,12 +13,17 @@ html {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 
 body {
     display: grid;
     height: 100%;
     grid-template-rows: auto 1fr auto;
+
+    &.modal-opened {
+        overflow: hidden;
+    }
 }
 
 main {
